# rob4_atc_2026_ur_examples

./: README.md  README_Noah.md  build_helpers.sh  dependencies.repos  installations.sh
ur3e_ros2_cartesian_control_scripts_examples/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ur3e_ros2_cartesian_control_scripts_examples/config/: cartesian_servo.yaml
ur3e_ros2_cartesian_control_scripts_examples/positions/: saved_pose.md
ur3e_ros2_cartesian_control_scripts_examples/scripts/: __init__.py  cartesian_compliance_sender.py  cartesian_force_sender.py  cartesian_motion_sender.py  cartesian_motion_sender_from_tf.py  cartesian_motion_sender_lib.py  cartesian_motion_sender_repeating.py  cartesian_servo.py  controller_utils.py
ur3e_ros2_control_scripts_examples/: essai_sender.py  package.xml  setup.cfg  setup.py
ur3e_ros2_control_scripts_examples/scripts/: __init__.py  controller_utils.py  essai_sender.py  forward_velocity_sender.py  test_sender.py  trajectory_sender.py  trajectory_sender_origin.py
ur_atc_robot_cell/ur_atc_robot_cell_control/: CMakeLists.txt  package.xml
ur_atc_robot_cell/ur_atc_robot_cell_control/config/: ros2_controllers.yaml
ur_atc_robot_cell/ur_atc_robot_cell_control/launch/: rsp.launch.py  start_robot.launch.py
ur_atc_robot_cell/ur_atc_robot_cell_control/urdf/: my_robot_cell_controlled.urdf.xacro
ur_atc_robot_cell/ur_atc_robot_cell_description/: CMakeLists.txt  package.xml
ur_atc_robot_cell/ur_atc_robot_cell_description/launch/: view_robot.launch.py
ur_atc_robot_cell/ur_atc_robot_cell_description/meshes/: adaptor_parts.stl  adaptor_parts__2.stl  adaptor_parts__3.stl  adaptor_parts__4.stl  adaptor_parts__5.stl  base_link.stl  base_link_gripper_base.part  base_link_gripper_base.stl  finger.part  finger.stl  iso_50_flange_schunk_v1.stl  robot_side.stl  schunk_5522661_finger_egp_64.part  schunk_5522661_finger_egp_64.stl  tool_adaptor.stl  tool_adaptor2.stl  tool_side.stl
ur_atc_robot_cell/ur_atc_robot_cell_description/urdf/: gripper_side_TC.xacro  my_robot_cell.urdf.xacro  my_robot_cell_macro.xacro  tool_rack.xacro
ur_atc_robot_cell/ur_atc_robot_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_atc_robot_cell/ur_atc_robot_cell_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  my_robot_cell.srdf  ompl_planning.yaml  ros2_controllers.yaml
ur_atc_robot_cell/ur_atc_robot_cell_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
