<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_ros2_cartesian_control_scripts_examples</name>
  <version>0.0.0</version>
  <description>An easy-to-start configuration for cartesian_controllers</description>
  <maintainer email="yasmine.makkaoui@ipa.fraunhofer.de">Yasmine Makkaoui</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rackki_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
