<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_ros2_control_scripts_examples</name>
  <version>0.0.0</version>
  <description>Helper scripts for controlling the UR robot cell.</description>
  <maintainer email="yasmine.makkaoui@ipa.fraunhofer.de">ros</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
